Add new functions for age range calculation and sequence generation

--- a/Fullstack/act_1.3.2/index.html
+++ b/Fullstack/act_1.3.2/index.html
@@ -46,6 +46,21 @@
 
         <button onclick="rangoEtario()">Calcular</button>
         <hr>
+    
+    <!-- 4. funcion 1-->
+        <h1>Funcion 1</h1>
+
+        <h2>Ingrese la edad de la persona:</h2>
+
+        <input
+        id="edad"
+        type="string"
+        placeholder="Edad"
+        value=""
+        >
+
+        <button onclick="rangoEtario()">Calcular</button>
+        <hr>
 
 
     <script src="script.js"></script>
