Remove unused HTML elements and delete CSS styles for the delete button

--- a/Fullstack/act_1.3/ej_3/index.html
+++ b/Fullstack/act_1.3/ej_3/index.html
@@ -12,32 +12,8 @@
     <input type="text" id="nuevaTarea" placeholder="Escribe una tarea">
     <button onclick="agregarTarea()">Agregar tarea</button>
 
-    <ul id="listaTareas">
-
-    </ul>
+    <ul id="listaTareas"></ul>
 
     <script src="script.js"></script>
 </body>
 </html>
-
-<!-- 
-<ol>
-        <li>
-            Terminar guia fullstack
-            <button onclick="eliminar()">Eliminar</button>
-        </li> 
-        <li>Estudiar sql
-            <button onclick="eliminar()">Eliminar</button>
-        </li>
-        <li>Juntarme con el Maxi para hacer lo de estadistica
-            <button onclick="eliminar()">Eliminar</button>
-        </li>
-    </ol>
-
-    <label for="mensaje">Nueva tarea:</label>
-    <br>
-    <textarea id="mensaje" name="mensaje"></textarea>
-    <br><br>
-
-    <button onclick="validar()">Agregar tarea</button>
--->
