--- a/Fullstack/act_1.3/ej_4/index.html
+++ b/Fullstack/act_1.3/ej_4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria</title>
+    <title>Galería</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,18 +16,19 @@
 
     <div class="gallery">
         <div class="photo dog">
-            <img alt="perro" src="a.png"/>
-            <img alt="perro" src="b.jpg"/>
-            <img alt="perro" src="c.jpg"/>
+            <div class="image-container"><img alt="perro" src="img/a.png"/></div>
+            <div class="image-container"><img alt="perro" src="img/b.jpg"/></div>
+            <div class="image-container"><img alt="perro" src="img/c.jpg"/></div>
         </div>
 
-         <div class="photo cat">
-            <img alt="gato" src="d.jpg"/>
-            <img alt="gato" src="f.jpg"/>
-            <img alt="gato" src="e.jpg"/>
-         </div>
+        <div class="photo cat">
+            <div class="image-container"><img alt="gato" src="img/d.jpg"/></div>
+            <div class="image-container"><img alt="gato" src="img/e.jpg"/></div>
+            <div class="image-container"><img alt="gato" src="img/f.jpg"/></div>
+        </div>
 
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
