--- a/Fullstack/act_final_e1/login.html
+++ b/Fullstack/act_final_e1/login.html
@@ -1,54 +1,33 @@
-<!-- 
-La estructura HTML incluye 
-<header>, <nav>, <main>, <footer>
-    
-<section>, <article>, . 
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZonaLibros - Iniciar Sesión</title>
-
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="navbar-nav">
-                <a class="nav-link" href="index.html">HOME</a>
-                <h1>ZONALIBROS</h1>
-                <a class="nav-link" href="#">INICIAR SESIÓN</a>
-            </div>
-        </nav>
-    </header>
+    <section class="Contenedor">
+        <Header id="HeaderH1">
+            <H1>ZonaLibros</H1>
+            <button id="BtnSignin">Sign in</button>
+        </Header>
 
-    <main>
-        <h2>Inicio de Sesión</h2>
+        <section id="Box-Formulario">
+            <h1 id="FormH1">Inicio de sesión</h1>
+            <form action="" id="form" class="form" align="center">
+                <p>Email</p>
+                <input type="email" name="@duocuc.cl" id="" placeholder="Ingrese correo...">
+                <p>Contraseña</p>
+                <input id="contraseña" type="password" placeholder="Ingrese contraseña...">
+                <br><br>
+                <button id="Btnsubmit" type="submit">Iniciar sesión</button>
+            </form>
+        </section>
+    </section>
 
-        <form class="mt-3" action="#" method="post">
-            <div class="mb-3">
-                <label for="correo" class="form-label">Correo</label>
-                <br>
-                <input type="email" id="correo" name="correo" class="form-control" placeholder="tucorreo@dominio.com"
-                    required>
-            </div>
-            <br>
-            <div class="mb-3">
-                <label for="mensaje" class="form-label">Contraseña</label>
-                <br>
-                <textarea id="mensaje" name="mensaje" class="form-control" rows="4"
-                    placeholder="Escribe tu mensaje..."></textarea>
-            </div>
-            <br>
-            <button class="btn btn-primary" type="submit">Iniciar de Sesión</button>
-        </form>
-    </main>
-
-    <footer class="footer">&reg; Moisés Rodríguez - 2025</footer>
     
+    <footer id="foot">Tienda ZonaLibros ©</footer>
     <script src="script.js"></script>
 </body>
 </html>
