Refactor login and registration pages for consistency and localization; update titles, labels, and button texts to Spanish.

--- a/Fullstack/act_final_e1/login.html
+++ b/Fullstack/act_final_e1/login.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Zona Libros - Iniciar sesión</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="Contenedor">
         <Header id="HeaderH1">
-            <H1>ZonaLibros</H1>
-            <button id="BtnSignin">Sign in</button>
+            <H1>ZONALIBROS</H1>
+            <button id="BtnLogin">REGISTRARSE</button>
+            <a href="">HOME</a>
         </Header>
 
         <section id="Box-Formulario">
             <h1 id="FormH1">Inicio de sesión</h1>
             <form action="" id="form" class="form" align="center">
-                <p>Email</p>
+                <p>Correo</p>
                 <input type="email" name="@duocuc.cl" id="" placeholder="Ingrese correo...">
                 <p>Contraseña</p>
                 <input id="contraseña" type="password" placeholder="Ingrese contraseña...">
                 <br><br>
-                <button id="Btnsubmit" type="submit">Iniciar sesión</button>
+                <button id="Btnsubmit" type="submit">INICIAR SESIÓN</button>
             </form>
+
+
         </section>
     </section>
-
-    
     <footer id="foot">Tienda ZonaLibros ©</footer>
     <script src="script.js"></script>
 </body>
+
 </html>
