--- a/Fullstack/act_final_e1/registro.html
+++ b/Fullstack/act_final_e1/registro.html
@@ -4,54 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>Zona Libros - Registro</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="Contenedor">
         <Header id="HeaderH1">
-            <H1>ZonaLibros</H1>
-            <button id="BtnLogin">Login</button>
-            <a href="">Home</a>
+            <H1>ZONALIBROS</H1>
+            <button id="BtnLogin">INICIAR SESIÓN</button>
+            <a href="">HOME</a>
         </Header>
 
         <section id="Box-Formulario">
-            <h1 id="FormH1">Formulario</h1>
+            <h1 id="FormH1">Registro de usuario</h1>
             <form action="" id="form" class="form" align="center">
                 <P>Nombre y apellido</P>
                 <input id="nombre" type="text" placeholder="Ingrese nombre...">
-                <p>Email</p>
+                <p>Correo</p>
                 <input type="email" name="@duocuc.cl" id="" placeholder="Ingrese correo...">
                 <p>Contraseña</p>
                 <input id="contraseña" type="password" placeholder="Ingrese contraseña...">
                 <p>Confirmar Contraseña</p>
                 <input type="password" placeholder="Confirme contraseña...">
-                <P>Ingrese celular (opcional)</P>
+                <P>Teléfono (opcional)</P>
                 <input type="tel" placeholder="Ingrese su numero...">
+                <br><br>
+                <h2>Tipo de Género</h2>
 
                 <section id="Checkbox">
-                    <h2>Tipo de Genero</h2>
                     <input type="checkbox" name="Ficcion" id="Genero">
-                    <label for="Genero">Ficcion</label>
+                    <label for="Genero">Ficción</label>
                     <input type="checkbox" name="Misterio" id="Genero">
                     <label for="Genero">Misterio</label>
                     <input type="checkbox" name="Fantasia" id="Genero">
-                    <label for="Genero">Fantasia</label>
+                    <label for="Genero">Fantasía</label>
                     <input type="checkbox" name="CF" id="Genero">
-                    <label for="Genero">Ciencia Ficcion</label>
+                    <label for="Genero">Ciencia Ficción</label>
                     <input type="checkbox" name="Romance" id="Genero">
                     <label for="Genero">Romance</label>
                     <input type="checkbox" name="Terror" id="Genero">
                     <label for="Genero">Terror</label>
                     <input type="checkbox" name="Historico" id="Genero">
-                    <label for="Genero">Historico</label>
+                    <label for="Genero">Histórico</label>
                     <input type="checkbox" name="Aventura" id="Genero">
                     <label for="Genero">Aventura</label>
                     <input type="checkbox" name="Biografia" id="Genero">
-                    <label for="Genero">Biografia</label>
+                    <label for="Genero">Biografía</label>
                 </section>
-                <button id="Btnsubmit" type="submit">Enviar</button>
+                <button id="Btnsubmit" type="submit">REGISTRAR</button>
             </form>
 
 
