listos los botones
Update button functionality and styles for login and registration pages

--- a/Fullstack/act_final_e1/login.html
+++ b/Fullstack/act_final_e1/login.html
@@ -12,7 +12,7 @@
     <section class="Contenedor">
         <Header id="HeaderH1">
             <H1>ZONALIBROS</H1>
-            <button id="BtnLogin">REGISTRARSE</button>
+            <button id="BtnRegis" onclick="window.location.href='registro.html'">REGISTRARSE</button>
             <a href="">HOME</a>
         </Header>
 
