--- a/Fullstack/act_final_e1/registro.html
+++ b/Fullstack/act_final_e1/registro.html
@@ -12,7 +12,7 @@
     <section class="Contenedor">
         <Header id="HeaderH1">
             <H1>ZONALIBROS</H1>
-            <button id="BtnLogin">INICIAR SESIÓN</button>
+            <button id="BtnLogin" onclick="window.location.href='login.html'">INICIAR SESIÓN</button>
             <a href="">HOME</a>
         </Header>
 
