Update placeholders and footer text for consistency in login and registration pages

--- a/Fullstack/act_final_e1/login.html
+++ b/Fullstack/act_final_e1/login.html
@@ -20,9 +20,9 @@
             <h1 id="FormH1">Inicio de sesión</h1>
             <form action="" id="form" class="form" align="center">
                 <p>Correo</p>
-                <input type="email" name="@duocuc.cl" id="" placeholder="Ingrese correo...">
+                <input type="email" name="@duocuc.cl" id="" placeholder="">
                 <p>Contraseña</p>
-                <input id="contraseña" type="password" placeholder="Ingrese contraseña...">
+                <input id="contraseña" type="password" placeholder="">
                 <br><br>
                 <button id="Btnsubmit" type="submit">INICIAR SESIÓN</button>
             </form>
@@ -30,7 +30,7 @@
 
         </section>
     </section>
-    <footer id="foot">Tienda ZonaLibros ©</footer>
+    <footer id="foot">Tienda ZONALIBROS ©</footer>
     <script src="script.js"></script>
 </body>
 
