--- a/Fullstack/act_final_e1/registro.html
+++ b/Fullstack/act_final_e1/registro.html
@@ -20,15 +20,15 @@
             <h1 id="FormH1">Registro de usuario</h1>
             <form action="" id="form" class="form" align="center">
                 <P>Nombre y apellido</P>
-                <input id="nombre" type="text" placeholder="Ingrese nombre...">
+                <input id="nombre" type="text" placeholder="">
                 <p>Correo</p>
-                <input type="email" name="@duocuc.cl" id="" placeholder="Ingrese correo...">
+                <input type="email" name="@duocuc.cl" id="" placeholder="correo@gmail.com">
                 <p>Contraseña</p>
-                <input id="contraseña" type="password" placeholder="Ingrese contraseña...">
+                <input id="contraseña" type="password" placeholder="">
                 <p>Confirmar Contraseña</p>
-                <input type="password" placeholder="Confirme contraseña...">
+                <input type="password" placeholder="">
                 <P>Teléfono (opcional)</P>
-                <input type="tel" placeholder="Ingrese su numero...">
+                <input type="tel" placeholder="+56912345678">
                 <br><br>
                 <h2>Tipo de Género</h2>
 
@@ -58,7 +58,7 @@
 
         </section>
     </section>
-    <footer id="foot">Tienda ZonaLibros ©</footer>
+    <footer id="foot">Tienda ZONALIBROS ©</footer>
     <script src="script.js"></script>
 </body>
 
