Add "Forgot Password?" link to login form and style adjustments

--- a/Fullstack/act_final_e1/login.html
+++ b/Fullstack/act_final_e1/login.html
@@ -23,6 +23,8 @@
                 <input type="email" name="@duocuc.cl" id="" placeholder="">
                 <p>Contraseña</p>
                 <input id="contraseña" type="password" placeholder="">
+                <br>
+                <a id="recuperar" href="#">¿Olvidaste tu contraseña?</a>
                 <br><br>
                 <button id="Btnsubmit" type="submit">INICIAR SESIÓN</button>
             </form>
