--- a/Fullstack/act_final_e1/registro.html
+++ b/Fullstack/act_final_e1/registro.html
@@ -23,23 +23,23 @@
             <form id="form" class="form" align="center" onsubmit="return Validar()">
                 <p>Nombre y apellido</p>
                 <input id="nombre" type="text" placeholder="Ingrese nombre...">
-
+                <br><span id="error-nombre" class="error"></span><br>
 
                 <p>Correo</p>
                 <input type="email" id="email" placeholder="Ingrese correo...">
-
+                <br><span id="error-email" class="error"></span><br>
 
                 <p>Contraseña</p>
                 <input id="contraseña" type="password" placeholder="Ingrese contraseña...">
-
+                <br><span id="error-contraseña" class="error"></span><br>
 
                 <p>Confirmar Contraseña</p>
                 <input id="confirmar_contraseña" type="password" placeholder="Confirme contraseña...">
-
+                <br><span id="error-confirmar_contraseña" class="error"></span><br>
 
                 <p>Teléfono (opcional)</p>
                 <input type="tel" id="telefono" placeholder="Ingrese su número...">
-                <span id="error-telefono" class="error"></span><br><br>
+                <br><span id="error-telefono" class="error"></span><br>
 
                 <h2>Tipo de Género</h2>
                 <section id="Checkbox">
