Update section headings for consistency and improve comments in JavaScript

--- a/Fullstack/ev_parcial_1/index.html
+++ b/Fullstack/ev_parcial_1/index.html
@@ -23,13 +23,13 @@
 
     <main>
         <section id="incio">
-            <h2>Bienvenido a ZonaLibros</h2>
+            <h2>Inicio</h2>
 
             <p>Explora nuestro gran catálogo de libros!</p>
         </section>
 
         <section id="productos">
-            <h2>Nuestros Libros</h2>
+            <h2>Productos</h2>
 
             <div id="filtros">
                 <button data-category="all">Todos</button>
@@ -47,7 +47,7 @@
         </section>
 
         <section id="contacto">
-            <h2>Contáctanos</h2>
+            <h2>Contacto</h2>
 
             <form id="contact-form" novalidate> <!-- novalidate para controlar los mensajes de error -->
                 <label for="nombre">Nombre:</label>
